<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">hh_test_task</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main01">Р Е З Ю М Е</string>
     <string name="ok">OK</string>
    <string name="main02">ОТКЛИК</string>
    <string name="fio">Ф.И.О.</string>
    <string name="date">Дата рождения:</string>
    <string name="hello">Тестовое задание hh_school!!!</string>
    <string name="malefemale">Пол:</string>
    <string name="sendresume">ОТПРАВИТЬ РЕЗЮМЕ</string>
    <string name="sendresponse">ОТПРАВИТЬ ОТВЕТ</string>
    <string name="malefe_prompt">Выберите пол:</string>
    <string-array name="malefe">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string name="dolzh">Занимаемая должность</string>
    <string name="zarpl">Зарплата</string>
    <string name="ph_number">Номер телефона</string>
    <string name="letter">Письмо соискателю</string>
    <string name="email">Адрес электронной почты</string>
    <string name="error1act">Необходимо заполнить все поля анкеты резюме!</string>
    <string name="error3act">Номер телефона должен содержать минимум 5 цифр!</string>
    <string name="error2act">Отправлено пустое письмо!</string>
    <style name="ButtonText">
	    <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textSize">30sp</item>
	    <item name="android:textStyle">bold</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>
	<style name="CodeFont" parent="@android:style/TextAppearance.Medium">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#309C13</item>
        <item name="android:textSize">30sp</item>
        <item name="android:gravity">center</item>
        <item name="android:alignmentMode">alignBounds</item>
        <item name="android:textStyle">bold</item>
        <item name="android:typeface">sans</item>
        <item name="android:textAppearance">?android:attr/textAppearanceLarge</item>
     </style>
     <style name="CodeFont.Red">
        <item name="android:textColor">#FF0000</item>
    </style>
     <style name="CodeFont.OtherTV">
        <item name="android:textSize">25sp</item>
         <item name="android:textAppearance">?android:attr/textAppearanceSmall</item>
          <item name="android:textColor">#081F02</item>
           <item name="android:textStyle">italic</item>
    </style>

     <style name="CodeFontEditText.fio" parent="@android:style/TextAppearance.Medium">
        <item name="android:inputType">textCapWords|textPersonName</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
    </style>
    <style name="CodeFontEditText.dolzh" parent="@android:style/TextAppearance.Medium">
        <item name="android:inputType">textCapSentences|textMultiLine</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:ems">10</item>
    </style>
     <style name="CodeFontEditText.zarpl" parent="@android:style/TextAppearance.Medium">
        <item name="android:inputType">number</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:ems">10</item>
    </style>
     <style name="CodeFontEditText.phone" parent="@android:style/TextAppearance.Medium">
        <item name="android:inputType">phone</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:ems">10</item>
    </style>
      <style name="CodeFontEditText.mail" parent="@android:style/TextAppearance.Medium">
        <item name="android:inputType">textEmailAddress</item>
        <item name="android:layout_width">match_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:ems">10</item>
    </style>


</resources>